--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Pritish's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/pritish9156/Resume_Lighthouse_JavaFullStack_2-12-24/blob/7fc347744fa79d5de07bd4c3ee96b6472f2973c6/Pritish_Pawar_Resume_Lighthouse.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/pritish9156/Resume_Lighthouse_JavaFullStack_2-12-24/main/Pritish_Pawar_Resume_Lighthouse.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
